[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
sha2="0.10.6"
hex="0.4.3"
pbkdf2 = "0.11.0"
hmac="0.12.1"
secp256k1="0.25.0"
num="0.4.0"
hmac-sha512 = "1.1.4"
bs58="0.4.0"
bitcoin = "0.29.2"
bitcoin_hashes = "0.11.0"
base58 = "0.2.0"
sha3 = "0.10.6"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
tui = "0.19"
crossterm = "0.25"